--- a/css/ppstyles.css
+++ b/css/ppstyles.css
@@ -23,7 +23,7 @@ body {
     align-items: center;
     background-color: #d4efdf;
     padding: 20px;
-    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
 .nav-links {
@@ -63,6 +63,7 @@ body {
     top: 100%;
     left: 0;
     margin: 0;
+    z-index: 10;
 }
 
 .dropdown:hover .dropdown-menu {
@@ -108,7 +109,7 @@ body {
     background-color: white;
     padding: 20px;
     border-radius: 15px;
-    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     width: 280px;
     transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
@@ -125,23 +126,24 @@ body {
 
 .about-box:hover {
     transform: translateY(-5px);
-    box-shadow: 0px 10px 15px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 10px 15px rgba(0, 0, 0, 0.1);
 }
 
 /* Resources Section */
 .resources-section {
-    text-align: center;
     padding: 40px 20px;
 }
 
 .resources-section h2 {
     color: #509f97;
     font-size: 24px;
+    margin-bottom: 10px;
 }
 
 .resources-section p {
     color: #3d776d;
     font-size: 16px;
+    margin-bottom: 20px;
 }
 
 .resource-boxes {
@@ -149,14 +151,13 @@ body {
     flex-wrap: wrap;
     justify-content: center;
     gap: 20px;
-    margin-top: 20px;
 }
 
 .resource {
     background-color: white;
     padding: 20px;
     border-radius: 15px;
-    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     width: 90%;
     max-width: 600px;
     transition: transform 0.3s ease, box-shadow 0.3s ease;
@@ -176,7 +177,7 @@ body {
 
 .resource:hover {
     transform: translateY(-5px);
-    box-shadow: 0px 10px 15px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 10px 15px rgba(0, 0, 0, 0.1);
 }
 
 /* Footer */
